# kgts-task

./: .dockerignore  .gitignore  Dockerfile  KGTS Tech Task.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: main.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Board.tsx  Cell.tsx  DifficultySelector.tsx  MatchResult.tsx  RoundTransition.tsx  StatusPanel.tsx  SymbolPicker.tsx
order_chaos/: __init__.py  ai.py  board.py  bot.py  constants.py  game.py  match.py  patterns.py
tests/: test_ai.py  test_api.py  test_board.py  test_bot.py  test_game.py  test_match.py  test_patterns.py
