[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "order-chaos-engine"
version = "0.1.0"
description = "Pure Python game engine for Order and Chaos (6x6, single round)."
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
packages = ["order_chaos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
